--- a/popup.html
+++ b/popup.html
@@ -226,7 +226,7 @@
         <button id="showAll" class="show-all-btn">顯示全部票券</button>
       </div>
       <div class="social-section">
-        <a href="您的Thread文章連結" target="_blank" class="social-link">
+        <a href="https://github.com/coder220224/tixcraft-filter" target="_blank" class="social-link">
           <svg class="social-icon" viewBox="0 0 24 24" fill="currentColor">
             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z"/>
           </svg>
