--- a/popup.html
+++ b/popup.html
@@ -209,6 +209,10 @@
           <button class="add-btn" id="addKeyword">+</button>
         </div>
         <small>例如：VIP場邊席（按Enter或點擊+新增）</small>
+        <div style="color: #666; font-size: small;">
+          <div>搜尋格式：3200,A區（3200元中A區的票）</div>
+          <div>　　　　　3200+4500（3200元或4500元的票）</div>
+       </div>
         <div id="currentFilter" class="current-filter" style="display: none;">
           關鍵字篩選：<span id="filterText"></span>
         </div>
@@ -232,7 +236,7 @@
           </svg>
           查看使用教學與更新資訊
         </a>
-        <div class="version-text">版本 1.0.0 | 開發者：摳得柴柴</div>
+        <div class="version-text">版本 1.1.0 | 開發者：摳得柴柴</div>
       </div>
     </div>
   </div>
